UberService/k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-deployment-v2
  namespace: test
  labels:
    app: uber-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uber-app
      version: v2
  template:
    metadata:
      labels:
        app: uber-app
        version: v2
    spec:
      containers:
        - name: uber-container
          image: uber:1.0 # Or your v2 image
          ports:
            - containerPort: 8080
