UberService/k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uber-deployment-v1 # Changed name to include version
  namespace: test
  labels:
    app: uber-app
    version: v1        # Added version label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uber-app
      version: v1      # Added version label
  template:
    metadata:
      labels:
        app: uber-app
        version: v1    # Added version label
    spec:
      containers:
        - name: uber-container
          image: uber:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: uber-service
  namespace: test
  labels:
    app: uber-app # Make sure this label is here [prometheus]
spec:
  type: NodePort
  selector:
    app: uber-app
  ports:
    - name: http-metrics  # Add this name for ServiceMonitor compatibility [prometheus]
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30082
