UberService/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: uber-destination
  namespace: test
spec:
  host: uber-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100    # Limit connections to prevent overload
    outlierDetection:          # This is the "Circuit Breaker"
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
